Changed default visibilty of maps to none to fix bug

--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -75,6 +75,7 @@ input[type=submit]:focus {
 
 #map {
   height: 600px;
+  display: none;
 }
 
 #buttons {
